--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main, master]
 permissions:
-  id-toket: write
+  id-token: write
   contents: read
 jobs:
   test:
