PR: filter test cases are developed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.44.0",
+    "@reportportal/agent-js-playwright": "^5.1.8",
     "@types/node": "^20.12.12"
   },
   "dependencies": {
