--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 #please use dev, uat or prod
 ENV=dev
+
+# for local development
+REPORT_PORTAL_API_KEY=default_Mj5l7quwTQ6_QTEUCq8NwfTxncDkz3Kr0oAzeH8QdC3b-pSXoA8tTR6J9h5RA8Fy
